# grimmbot

./: .env.example  .flake8  .gitignore  INSTALL.md  INSTALL.txt  INSTALL_SETUP.txt  INSTALL_WINDOWS.txt  LICENSE  README.md  bloom_bot.py  bootstrap.sh  bot_credentials.example.yml  command.txt  config.env.example  configure.py  curse_bot.py  diagnostics.py  generate_env.py  goon_bot.py  grimbot.md  grimm_bot.py  grimm_utils.py  install.py  main.py  media_player.py  project_generator.sh  requirements.txt  run.py  run.sh  run_all.py  setup.cfg  setup.py  setup.sh  update.sh
ascii_art/: __init__.py  bloom.txt  curse.txt  grim.txt
bots/: bloombot.py  bot1.py  bot2.py  bot3.py  cursebot.py  grimbot.py
cogs/: __init__.py  admin_cog.py  announcement_cog.py  api_integration_cog.py  audit_cog.py  bloom_cog.py  curse_cog.py  custom_commands_cog.py  cyberpunk_campaign_cog.py  fun_cog.py  goon_cog.py  gpt_cog.py  grimm_cog.py  grimm_extra_cog.py  health_cog.py  help_cog.py  image_cog.py  jojo_cog.py  judge_cog.py  logging_cog.py  moderation_cog.py  music_cog.py  polls_cog.py  reaction_roles_cog.py  reminder_cog.py  role_management_cog.py  sentiment_cog.py  starboard_cog.py  tag_cog.py  trivia_cog.py  utility_cog.py  welcome_cog.py  xp_cog.py
config/: README.md  bloom.env  command_config.json  curse.env  env_template.env  goon.env  grimm.env  settings.py  setup.env
docs/: CHANGELOG.md  cogs_overview.md  creating_cogs.md  cyberpunk_adventure.md  music_setup.md  personality_customization.md
grimmbot/: __init__.py  bot.py  cli.py  coordinator.py  echo_bot.py  reverse_bot.py  (+1 more)
(+36 files in other folders)
