[metadata]
name = grimmbot
version = 0.1.0
author = The-w0rst
description = Simple demo bots working together
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.8
install_requires = []

[options.entry_points]
console_scripts =
    grimmbot = grimmbot.cli:main
